cmake_minimum_required(VERSION 3.28)
project(Ucipher)

set(CMAKE_CXX_STANDARD 20)

add_executable(Ucipher
        main.cpp
        utils.cpp
        utils.h
        UCipher.cpp
        UCipher.h
        DiffCryptAnalysis.cpp
        DiffCryptAnalysis.cpp
        DiffCryptAnalysis.cpp
        DiffCryptAnalysis.h)
